@@ -1,3 +1,10 @@
+2000-01-11  Havoc Pennington  <hp@pobox.com>
+
+	* gconf.m4: separate $4 from gconf_config_args
+
+	* gconf-config.in (af_libs): -lgconf, not -lgconf-client
+	(Libraries): add gconf-gtk lib
+
 2000-01-11 Andreas Hyden <andreas.hyden@telia.com>
 
 	* configure.in : added sv (swedish)
